Used percentages to stop text overlapping with SVG.

--- a/assets/components/introduction/squaresIntroduction.scss
+++ b/assets/components/introduction/squaresIntroduction.scss
@@ -27,7 +27,7 @@
   }
 
   @include mq($from: desktop) {
-    padding-bottom: 180px;
+    padding-bottom: 10%;
   }
 }
 
